syntax = "proto3";

option java_multiple_files = true;
option java_package = "kvpb";
option java_outer_classname = "kvpb";

import "google/api/annotations.proto";

package kvpb;

message RawGetRequest {
    string key = 1;
}

message RawGetResponse {
    string value = 1;
    string error = 2;
}

message RawPutRequest {
    string key = 1;
    string value = 2;
}

message RawPutResponse {
    string error = 1;
}

message RawDeleteRequest {
    string key = 1;
}

message RawDeleteResponse {
    string error = 1;
}


service KvService {
    rpc RawGet (RawGetRequest) returns (RawGetResponse) {
        option (google.api.http) = {
            get: "/api/record/{key}"
        };
    }

    rpc RawPut (RawPutRequest) returns (RawPutResponse) {
        option (google.api.http) = {
            post: "/api/record"
            body: "*"
        };
    }

    rpc RawDelete (RawDeleteRequest) returns (RawDeleteResponse) {
        option (google.api.http) = {
            delete: "/api/record/{key}"
        };
    }
}